--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "framer-motion": "^6.3.16",
-    "next": "^12.2.1-canary.3",
+    "next": "^12.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-responsive-carousel": "^3.2.23",
