--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-tsparticles": "^2.1.3",
     "sass": "^1.52.2",
     "sharp": "^0.30.7"
   },
