--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "framer-motion": "^6.3.16",
-    "next": "^12.2.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "^12.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-tsparticles": "^2.1.3",
