--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "form-data": "^4.0.0",
     "framer-motion": "^6.3.16",
     "next": "^12.2.5",
     "react": "^18.2.0",
