--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "form-data": "^4.0.0",
     "framer-motion": "^6.3.16",
+    "jquery": "^3.6.3",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
